# basichatmonotiler

./: CMakeLists.txt  README.md  monopts.txt
src/: makemonotile.cpp
